--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -65,7 +65,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item This is an article about Greek mythology which is probably unimportant for our sentence. The correct subject in this sentence is $They$, which points to something that is clarified in the context and not within the sentence (beautiful maiden nymphs). The correct object is $humans$. 
   	\item \insertcode{"Scripts/196/196-2.sentence"}{Target sentence in $R_1$ and $R_2$.}
   	\item The test sentence is of the form $X$ trick, $X$ mischievous. The corpus sentence is of the form $X$ mischievous towards, $X$ trick.
-  	\item A predicate in English can be of the form {\bf $adverb$ towards} or {\bf $adverb$ against}. Is this considered? 
+  	\item A predicate in English can be of the form {\bf $adverb$ towards} or {\bf $adverb$ against}. Is this considered?
   \end{itemize}
 
   \item[Sentence 201] \hfill \\
@@ -88,15 +88,29 @@ tabsize=2, % Number of spaces per tab in the code
   	\item This sentence is a {\it concessive clause} determined by {\bf Even though}. {\it Even though they were smart about it, they lost some serious money} is equivalent to {\it They lost some serious money even though they were smart about it}.
   \end{itemize}
 
-  % ------------- EXAMPLE EXAMPLE EXAMPLE
+  \item[Sentence 443] \hfill \\
+  The {\bf cheetah-} outran the {\bf antelope+} so it got eaten.
+  \begin{itemize}
+  	\item The comparison {\bf eat $\sim$ outrun X} vs. {\bf X outrun $\sim$ eat} makes no sense. Not sure if this sentence is actually translatable to a logic form since eat is conjugated to its passive form (eg. the antelope was eaten, the antelope got eaten, the antilope is being eaten, etc.), which is not the same thing as its corresponding active form (the antilope is eating, the antilope ate). However the system makes some kind of generalization here and suggests that "eating" in istself is an implication of {\it a cheetah that is outrunning} or {\it outrunning a cheetah}.
+  	\item {\bf eat X $\sim$ outrun X} vs. {\bf X outrun $\sim$ eat X}?
+  \end{itemize}
 
-  \item[Example 200] \hfill \\
+  \item[Sentence 70] \hfill \\
+  {\bf Jimbo} was running from {\bf Bobbert+} because he smelled awful.
+  \begin{itemize}
+  	\item The problem here is that we are comparing {\bf X smell $\sim$ run from X} vs. {\bf X run $\sim$ smell X}. The verb {\it smell} can have several meanings depending on context. It can be sort-of reflexive and not at the same time, i.e. "He smells" can be equivalent to "He stinks" and "He is sensing a smell" at the same time; it depends on the context. 
+  	\item {\bf X smell awful $\sim$ run from X} vs. {\bf X run $\sim$ smell awful X} would probably solve this problem.
+  \end{itemize}
+
+  % ------------- EXAMPLE EXAMPLE EXAMPLE
+  \item[Example] \hfill \\
   {\bf John+} tricked {\bf Bill-} because he was mischievous.
   \begin{itemize}
   	\item lol
   	\item \insertcode{"Scripts/example.pl"}{Example}
   	\item Possible solution: roflmao idk
   \end{itemize}
+  
 
   
 
@@ -107,8 +121,6 @@ tabsize=2, % Number of spaces per tab in the code
 \end{document}
 
 \begin{comment}
-	350
-	443
 	70
 	116
 	407
