Added error analysis on sentence id: 407

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -102,7 +102,16 @@ tabsize=2, % Number of spaces per tab in the code
   	\item {\bf X smell awful $\sim$ run from X} vs. {\bf X run $\sim$ smell awful X} would probably solve this problem.
   \end{itemize}
 
+  \item[Sentence 407] \hfill \\
+  {\bf Luigi+} rescued {\bf Mario-} because he was the only one who can.
+  \begin{itemize}
+  	\item This sentence is not gramatically correct. It should be {\it Luigi+ rescued Mario- because he was the only one who could}.
+  	\item Current comparison is {\bf X one $\sim$ X rescue} vs. {\bf X one $\sim$ rescue X}. This is too vague.
+  	\item Results would probably be better if the system compared {\bf X one who can $\sim$ X rescue} vs. {\bf X one who can $\sim$ rescue X}.
+  \end{itemize}
+
   % ------------- EXAMPLE EXAMPLE EXAMPLE
+\begin{comment}
   \item[Example] \hfill \\
   {\bf John+} tricked {\bf Bill-} because he was mischievous.
   \begin{itemize}
@@ -110,6 +119,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item \insertcode{"Scripts/example.pl"}{Example}
   	\item Possible solution: roflmao idk
   \end{itemize}
+\end{comment}
   
 
   
@@ -121,7 +131,6 @@ tabsize=2, % Number of spaces per tab in the code
 \end{document}
 
 \begin{comment}
-	70
 	116
 	407
 	88
