Refactoring and comments

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -53,8 +53,6 @@ tabsize=2, % Number of spaces per tab in the code
 
 
 \begin{description}
-
-
   % ------------- SENTENCE 196
   \item[Sentence 196] \hfill \\
   {\bf John+} tricked {\bf Bill-} because he was mischievous.
@@ -68,6 +66,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item A predicate in English can be of the form {\bf $adjective$ towards} or {\bf $adjective$ against}. Is this considered?
   \end{itemize}
 
+  % ------------- SENTENCE 201
   \item[Sentence 201] \hfill \\
   {\bf Rick Davis-} campaigned for {\bf John McCain+} since he was the best man for office.
   \begin{itemize}
@@ -76,6 +75,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item The system should be able to make the comparison {\bf X man for office $\sim$ campaign for X} vs. {\bf X campaign for $\sim$ X man for office} instead of {\bf X man $\sim$ campaign for X} vs. {\bf X campaign for $\sim$ X man}. 
   \end{itemize}
 
+  % ------------- SENTENCE 350
   \item[Sentence 350] \hfill \\
   {\bf Claudia-} lost all her money to {\bf Valarie+} because she is really smart.
   \begin{itemize}
@@ -88,6 +88,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item This sentence is a {\it concessive clause} determined by {\bf Even though}. {\it Even though they were smart about it, they lost some serious money} is equivalent to {\it They lost some serious money even though they were smart about it}.
   \end{itemize}
 
+  % ------------- SENTENCE 443
   \item[Sentence 443] \hfill \\
   The {\bf cheetah-} outran the {\bf antelope+} so it got eaten.
   \begin{itemize}
@@ -95,6 +96,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item {\bf eat X $\sim$ outrun X} vs. {\bf X outrun $\sim$ eat X}?
   \end{itemize}
 
+  % ------------- SENTENCE 70
   \item[Sentence 70] \hfill \\
   {\bf Jimbo} was running from {\bf Bobbert+} because he smelled awful.
   \begin{itemize}
@@ -102,14 +104,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item {\bf X smell awful $\sim$ run from X} vs. {\bf X run $\sim$ X smell awful } would probably solve this problem.
   \end{itemize}
 
-  \item[Sentence 407] \hfill \\
-  {\bf Luigi+} rescued {\bf Mario-} because he was the only one who can.
-  \begin{itemize}
-  	\item This sentence is not gramatically correct. It should be {\it Luigi+ rescued Mario- because he was the only one who could}.
-  	\item Current comparison is {\bf X one $\sim$ X rescue} vs. {\bf X one $\sim$ rescue X}. This is too vague.
-  	\item Results would probably be better if the system compared {\bf X one who can $\sim$ X rescue} vs. {\bf X one who can $\sim$ rescue X}.
-  \end{itemize}
-
+  % ------------- SENTENCE 116
   \item[Sentence 116] \hfill \\
   {\bf Bob-} sued {\bf Bill+} because he was embezzling funds. 
   \begin{itemize}
@@ -123,6 +118,15 @@ tabsize=2, % Number of spaces per tab in the code
   	\item  This text makes very little sense.
   \end{itemize}
 
+  % ------------- SENTENCE 407
+  \item[Sentence 407] \hfill \\
+  {\bf Luigi+} rescued {\bf Mario-} because he was the only one who can.
+  \begin{itemize}
+  	\item This sentence is not gramatically correct. It should be {\it Luigi+ rescued Mario- because he was the only one who could}.
+  	\item Current comparison is {\bf X one $\sim$ X rescue} vs. {\bf X one $\sim$ rescue X}. This is too vague.
+  	\item Results would probably be better if the system compared {\bf X one who can $\sim$ X rescue} vs. {\bf X one who can $\sim$ rescue X}.
+  \end{itemize}
+
 % ------------- SHIT ENDS HERE
 \end{description}
 
@@ -130,7 +134,6 @@ tabsize=2, % Number of spaces per tab in the code
 \end{document}
 
 \begin{comment}
-	116
 	407
 	88
 	47
