Added error analysis for sentence id:88

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -127,6 +127,14 @@ tabsize=2, % Number of spaces per tab in the code
   	\item Results would probably be better if the system compared {\bf X one who can $\sim$ X rescue} vs. {\bf X one who can $\sim$ rescue X}.
   \end{itemize}
 
+  % ------------- SENTENCE 88
+  \item[Sentence 88] \hfill \\
+  {\bf The employer-} offered {\bf Katie+} a job, because she was a fit for the company.
+  \begin{itemize}
+  	\item We are comparing {\bf X fit $\sim$ offer X} vs. {\bf X fit $\sim$ X offer}. The sentence is about job offerings which makes the comparison too vague.
+  	\item Something like {\bf X fit for the company $\sim$ offer X} vs. {\bf X fit for the company $\sim$ X offer} would probably work better.
+  \end{itemize}
+
 % ------------- SHIT ENDS HERE
 \end{description}
 
@@ -134,7 +142,6 @@ tabsize=2, % Number of spaces per tab in the code
 \end{document}
 
 \begin{comment}
-	407
 	88
 	47
 	307
