Added error analysis for id:47

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -135,6 +135,20 @@ tabsize=2, % Number of spaces per tab in the code
   	\item Something like {\bf X fit for the company $\sim$ offer X} vs. {\bf X fit for the company $\sim$ X offer} would probably work better.
   \end{itemize}
 
+  % ------------- SENTENCE 47
+  \item[Sentence 47] \hfill \\
+  {\bf Watson-} beat {\bf Ken+} at Jeopardy because he is an inferior human.
+  \begin{itemize}
+  	\item This sentence is probably not possible to resolve using this method. Here we can only know from world knowledge that Watson most likely is the IBM Watson AI and that Ken is a human being. The sentence itself tells us nothing about this.
+  \end{itemize}
+
+  % ------------- SENTENCE 47
+  \item[Sentence 47] \hfill \\
+  {\bf Watson-} beat {\bf Ken+} at Jeopardy because he is an inferior human.
+  \begin{itemize}
+  	\item This sentence is probably not possible to resolve using this method. Here we can only know from world knowledge that Watson most likely is the IBM Watson AI and that Ken is a human being. The sentence itself tells us nothing about this.
+  \end{itemize}
+
 % ------------- SHIT ENDS HERE
 \end{description}
 
@@ -142,7 +156,6 @@ tabsize=2, % Number of spaces per tab in the code
 \end{document}
 
 \begin{comment}
-	88
 	47
 	307
 	256
