--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -171,6 +171,7 @@ tabsize=2, % Number of spaces per tab in the code
   	\item At this moment we are comparing {\bf X become $\sim$ replace} vs. {\bf X become $\sim$ replace} which looks completely broken (looks identical?). Should at least be something like {\bf X become $\sim$ replace by X} vs. {\bf X become $\sim$ X replace}.
   \end{itemize}
 
+  % ------------- SENTENCE 241
   \item[Sentence 241] \hfill \\
   {\bf The hyena-s} scavenged from the {\bf lion+}s because they had left scraps.
   \begin{itemize}
@@ -184,6 +185,14 @@ tabsize=2, % Number of spaces per tab in the code
 	\title{{\large New Dataset}}
 \end{center}
 % ------------- NEW DATASET
+
+% ------------- SENTENCE 241
+  \item[Sentence 61] \hfill \\
+  The {\bf lifeguard-}s evacuated the {\bf swimmer+}s from the public pool because they were in danger of getting sick from human wastes in the water.
+  \begin{itemize}
+  	\item Nearest Neighbors performs following comparison: {\bf X be $\sim$ evacuate X} vs. {\bf X be $\sim$ X evacuate} which contains way too little information for script knowledge to be beneficial.
+  	\item {\bf X be $\sim$ evacuate X} vs. {\bf X be $\sim$ X evacuate}
+  \end{itemize}
 
 
 % ------------- SHIT ENDS HERE
