Added Winograd paper

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -201,6 +201,8 @@ tabsize=2, % Number of spaces per tab in the code
 % ------------- DOCUMENT END
 \end{document}
 
+%-------------- COMMENTS, OLD DATASET
+
 \begin{comment}
 	8
 	406
