Added background and motivation section for project proposal

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -195,6 +195,15 @@ tabsize=2, % Number of spaces per tab in the code
   \end{itemize}
 
 
+% ------------- SENTENCE 241
+  \item[Sentence 61] \hfill \\
+  The {\bf lifeguard-}s evacuated the {\bf swimmer+}s from the public pool because they were in danger of getting sick from human wastes in the water.
+  \begin{itemize}
+  	\item Nearest Neighbors performs following comparison: {\bf X be $\sim$ evacuate X} vs. {\bf X be $\sim$ X evacuate} which contains way too little information for script knowledge to be beneficial.
+  	\item {\bf X be $\sim$ evacuate X} vs. {\bf X be $\sim$ X evacuate}
+  \end{itemize}
+
+
 % ------------- SHIT ENDS HERE
 \end{description}
 
