friday update, let's go for a beer

--- a/project_specification.tex
+++ b/project_specification.tex
@@ -1,5 +1,5 @@
 % ------------- THE USUAL CRAP
-\documentclass{scrartcl}
+\documentclass{article}
 \usepackage{graphicx}
 
 \begin{document}
@@ -15,7 +15,7 @@
 
 % ------------- BACKGROUND
 \section{Background and Motivation}
-A proposed alternative to the famous Turing Test are resolution of so-called Winograd Schemas. The reason behind this is to try and invent a more reliable way to test human thinking behaviour in machines without using deception techniques, naive scripts or by cheating. The basic idea is to present a machine with questions that are easy to answer for English-speaking adults, but still so ambigous that a large corpus probably would not help much. 
+A proposed alternative to the famous Turing Test are resolution of so-called Winograd Schemas. The reason behind this is to pursue a more reliable way to test human thinking behaviour in machines without using deception techniques, naive scripts or by cheating. The basic idea is to present a machine with questions that are easy to answer for English-speaking adults, but still so ambigous that a large corpus probably would not help much. 
 
 An example of a Winograd Schema is presented as follows:
 \\ \\
@@ -25,17 +25,15 @@ An example of a Winograd Schema is presented as follows:
   \item The suitcase
 \end{itemize}
 
-Being part of a bilateral exchange program in Japan, I am currently sitting in a research lab at Tohoku University in Sendai that is specialized towards NLP. Researchers here have developed a system able to conduct large-scale acquisition of narrative event pairs from a huge corpus. At this moment they are using a kNN-based framework in order to discover potential impacts using script knowledge in coreference resolution. In the beginning of October this year they will participate in The Winograd Schema Challenge, an AI competition hosted by the non-profit organization Commonsense Reasoning.
+As being part of a bilateral exchange program in Japan, I am currently a research student in a laboratory at Tohoku University that is specialized towards NLP. One of the laboratory's research groups, focused on Knowledge Intensive Artificial Intelligence, have developed a system able to conduct large-scale acquisition of narrative event pairs from a huge corpus. At this moment they are using a case-based kNN framework in order to discover potential impacts using script knowledge in coreference resolution. In the beginning of October this year they will participate in The Winograd Schema Challenge, an AI competition hosted by the non-profit organization Commonsense Reasoning.
 
-With this thesis I aim to further explore these ideas by analyzing, evaluating and improving some parts of their current system.
+With this thesis I aim to further explore these ideas by analyzing, evaluating and finally attempt to make improvements to their current system.
 \subsection{Location}
 The project will be carried out at Inui-Okazaki Lab of Communication Science, Tohoku University Graduate School of Information Sciences, Sendai-shi, Miyagi, Japan.
 
 % ------------- SCIENTIFIC QUESTION
 \section{Scientific Question}
-
-\subsection{Question}
-
+The thesis will attempt to answer the question if script knowledge is useful or effective in pronoun resolution.
 \subsection{Current Research}
 
 \subsection{Methodology}
