Updated background section

--- a/project_specification.tex
+++ b/project_specification.tex
@@ -24,16 +24,14 @@ An example of a Winograd Schema is presented as follows:
   \item The trophy
   \item The suitcase
 \end{itemize}
+Being part of a bilateral exchange program in Japan, I currently work as a research student in a laboratory at Tohoku University that is specialized in NLP. One of the laboratory's research groups, focused on Knowledge Intensive Artificial Intelligence, has developed a system able to conduct large-scale acquisition of narrative event pairs from a huge corpus. At this moment they are using a case-based kNN framework in order to discover potential impacts using script knowledge in coreference resolution. In the beginning of October this year they will participate in The Winograd Schema Challenge, an AI competition hosted by the non-profit organization Commonsense Reasoning.
 
-As being part of a bilateral exchange program in Japan, I am currently a research student in a laboratory at Tohoku University that is specialized towards NLP. One of the laboratory's research groups, focused on Knowledge Intensive Artificial Intelligence, have developed a system able to conduct large-scale acquisition of narrative event pairs from a huge corpus. At this moment they are using a case-based kNN framework in order to discover potential impacts using script knowledge in coreference resolution. In the beginning of October this year they will participate in The Winograd Schema Challenge, an AI competition hosted by the non-profit organization Commonsense Reasoning.
-
-With this thesis I aim to further explore these ideas by analyzing, evaluating and finally attempt to make improvements to their current system.
+With this thesis I aim to further explore the benefits of using script knowledge in coreference resolution by analyzing, evaluating and finally attempt to make improvements to their current system.
 \subsection{Location}
 The project will be carried out at Inui-Okazaki Lab of Communication Science, Tohoku University Graduate School of Information Sciences, Sendai-shi, Miyagi, Japan.
-
 % ------------- SCIENTIFIC QUESTION
 \section{Scientific Question}
-The thesis will attempt to answer the question if script knowledge is useful or effective in pronoun resolution.
+The thesis will attempt to answer the question if script knowledge could be useful to improve existing models in coreference resolution.
 \subsection{Current Research}
 
 \subsection{Methodology}
