Added personal background to project specification

--- a/project_specification.tex
+++ b/project_specification.tex
@@ -42,7 +42,9 @@ The thesis will attempt to answer the question if script knowledge could be usef
 
 % ------------- PERSONAL BACKGROUND
 \section{Personal Background}
+To begin with I have had a general interest in AI and language since high school. I enrolled the international profile of the computer science program at KTH in 2010. In 2013 I began studying the master's program in computer science with the Language Engineering track as well as continuing studies in Japanese. Courses I have taken at KTH that are relevant to this project include Artificial Intelligence, Algorithms, Data Structures and Complexity, Advanced Algorithms, Markov Models and Mathematical Statistics among others. 
 
+I began my exchange studies at Tohoku University in September 2014. During the first five months I have spent my time mainly learning the fundamentals of Natural Language Processing and Machine Learning with guidance from my supervisors at the lab. I have also made some attempts to improve my Japanese skills further.
 % ------------- SUPERVISOR AT TOHOKU UNIVERSITY
 \section{Supervisor at Tohoku University}
 Professor Kentaro Inui is the official supervisor and will examine the final project. I have been placed in a research group with people of varying background that I may turn to for daily practical issues and guidance. The purpose of the research group is to provide a continous feedback loop.
