Added stuff under methodology

--- a/project_specification.tex
+++ b/project_specification.tex
@@ -35,7 +35,9 @@ The thesis will attempt to answer the question if script knowledge could be usef
 \subsection{Current Research}
 
 \subsection{Methodology}
+I have already spent a proper amount of time researching the subject by reading literature and looking up previous studies to a point where I feel confident.
 
+For start I will perform error analysis on the current system. This will be done by looking at the training data, their input dataset and the current results. While doing this I will continously suggest improvements and new features in collaboration with a research group working on different areas of the same project. When this is done a list with a number of experiments and implementations will be written to best fit the remaining project time.
 \subsection{Hypothesis}
 
 \subsection{Evaluation}
