Added evaluation part in project specification

--- a/project_specification.tex
+++ b/project_specification.tex
@@ -39,9 +39,13 @@ I have already spent a proper amount of time researching the subject by reading 
 
 For start I will perform error analysis on the current system. This will be done by looking at the training data, their input dataset and the current results. While doing this I will continously suggest improvements and new features in collaboration with a research group working on different areas of the same project. When this is done a list with a number of experiments and implementations will be written to best fit the remaining project time.
 \subsection{Hypothesis}
-
+Script knowledge may be proven to be useful in certain cirumstances as a method for improving already existing models in coreference resolution.
 \subsection{Evaluation}
-
+The thesis project may be considered complete when:
+\begin{itemize}
+	\item All suggested improvements to the current system have been implemented and their respective results have been recorded.
+	\item A failure. This would basically mean that all possible methods of performing suggested experiments have been attempted under guidance and surveillance of the mentors at the lab.
+\end{itemize}
 % ------------- PERSONAL BACKGROUND
 \section{Personal Background}
 To begin with I have had a general interest in AI and language since high school. I enrolled the international profile of the computer science program at KTH in 2010. In 2013 I began studying the master's program in computer science with the Language Engineering track as well as continuing studies in Japanese. Courses I have taken at KTH that are relevant to this project include Artificial Intelligence, Algorithms, Data Structures and Complexity, Advanced Algorithms, Markov Models and Mathematical Statistics among others. 
